--- a/app/globals.css
+++ b/app/globals.css
@@ -8,8 +8,6 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -23,4 +21,22 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+button[type="submit"] {
+    @apply px-4 py-2 bg-indigo-600 text-white rounded-2xl hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500
+}
+
+input[type="text"]{
+    @apply border
+    border-gray-400 rounded-lg p-2 text-lg
+    placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-purple-600;
+}
+@layer components {
+    .navlink {
+        @apply block py-2 px-3 text-white rounded-sm hover:text-blue-800 md:bg-transparent  md:p-0 dark:text-white;
+    }
+    .todo-div {
+        @apply flex hover:bg-slate-500 hover:text-red-300 hover:font-bold mt-2 hover:shadow-2xl hover:scale-102 transition-transform duration-300;
+    }
 }
