--- a/app/globals.css
+++ b/app/globals.css
@@ -39,4 +39,7 @@ input[type="text"]{
     .todo-div {
         @apply flex hover:bg-slate-500 hover:text-red-300 hover:font-bold mt-2 hover:shadow-2xl hover:scale-102 transition-transform duration-300;
     }
+    .clients-div {
+        @apply flex justify-center items-center p-4 bg-white rounded-lg shadow
+    }
 }
